--- a/lab-3/ll-3-overview-presentation.html
+++ b/lab-3/ll-3-overview-presentation.html
@@ -4,7 +4,7 @@
     <title>Machine Learning Learning Lab 3: Feature Engineering</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr. Joshua Rosenberg" />
-    <meta name="date" content="2023-07-17" />
+    <meta name="date" content="2023-07-18" />
     <script src="libs/header-attrs-2.22/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
@@ -37,7 +37,7 @@ class: clear, title-slide, inverse, center, top, middle
 # Machine Learning Learning Lab 3: Feature Engineering
 ----
 ### **Dr. Joshua Rosenberg**
-### July 17, 2023
+### July 18, 2023
 
 ---
 
@@ -99,7 +99,7 @@ How do we interpret a machine learning model? What else can we say, besides how 
 
 .panel[.panel-name[How?]
 
-# A few (other) options
+**A few (other) options**
 
 - Raw data points
 - Their mean
@@ -118,7 +118,7 @@ Here's a time stamp:
 
 
 ```
-## [1] "2023-07-17 09:36:41 EDT"
+## [1] "2023-07-18 09:14:33 EDT"
 ```
 
 **How could this variable be used as a predictor variable?**
@@ -211,11 +211,11 @@ We could be optimizing our model for our testing data; when used with new data, 
 
 ```
 ## # A tibble: 3 × 3
-##      id var_a  var_b
-##   &lt;int&gt; &lt;dbl&gt;  &lt;dbl&gt;
-## 1     1 0.959 0.0192
-## 2     2 0.780 0.476 
-## 3     3 0.736 0.137
+##      id var_a var_b
+##   &lt;int&gt; &lt;dbl&gt; &lt;dbl&gt;
+## 1     1 0.834 0.194
+## 2     2 0.238 0.385
+## 3     3 0.903 0.845
 ```
 
 Using _k_ = 10, how can we split *n* = 100 cases into ten distinct training and testing sets?
@@ -354,10 +354,19 @@ kfcv
 .panel[.panel-name[vfcv]
 
 
+```r
+# during step 3
+my_mod &lt;- rand_forest(mtry = tune(), # this specifies that we'll take steps later to tune the model
+                min_n = tune(),
+                trees = tune()) %&gt;%
+    set_engine("ranger", importance = "impurity") %&gt;%
+    set_mode("classification")
+```
 
 ]
 
 .panel[.panel-name[vfcv]
+
 
 ```r
 # during Step 4
@@ -438,6 +447,19 @@ And Rodriguez et al. (2021) and Gobert et al. (2013) (*optional*)
 ]
 ]
 
+
+---
+
+# *fin*
+
+We hope to see you in the ML topic area learning labs!
+
+- *Dr. Joshua Rosenberg* (jmrosenberg@utk.edu; https://joshuamrosenberg.com)
+- *Dr. Peng  He* (hepeng1@msu.edu)
+
+[These slides (Introductory Presentation)](https://laser-institute.github.io/machine-learning/introductory-presentation.html#1)
+
+[General troubleshooting tips for R and RStudio](https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
