commit edited files in posit cloud

--- a/lab-1/ll-1-case-study-key.html
+++ b/lab-1/ll-1-case-study-key.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="YOUR NAME HERE" />
 
-<meta name="date" content="2023-07-16" />
+<meta name="date" content="2023-07-18" />
 
 <title>Learning Lab 1 Case Study</title>
 
@@ -1589,7 +1589,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">Learning Lab 1 Case Study</h1>
 <h4 class="author">YOUR NAME HERE</h4>
-<h4 class="date">July 16, 2023</h4>
+<h4 class="date">July 18, 2023</h4>
 
 </div>
 
@@ -1770,7 +1770,7 @@ cleaning tasks. Use the code chunk below to load these two packages:</p>
 ## ✖ dplyr::lag()      masks stats::lag()
 ## ✖ yardstick::spec() masks readr::spec()
 ## ✖ recipes::step()   masks stats::step()
-## • Use tidymodels_prefer() to resolve common conflicts.</code></pre>
+## • Learn how to get started at https://www.tidymodels.org/start/</code></pre>
 <pre class="r"><code>library(janitor)</code></pre>
 <pre><code>## 
 ## Attaching package: &#39;janitor&#39;</code></pre>
