--- a/lab-1/ll-1-overview-presentation.html
+++ b/lab-1/ll-1-overview-presentation.html
@@ -158,14 +158,13 @@ These are joined together (see `oulad.R`) for this learning lab. You'll be doing
 
 ```
 ## # A tibble: 3 × 15
-##   code_module code_presentation id_student gender region               highest_education imd_band age_band
-##   &lt;chr&gt;       &lt;chr&gt;                  &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;                &lt;chr&gt;             &lt;chr&gt;    &lt;chr&gt;   
-## 1 AAA         2013J                  11391 M      East Anglian Region  HE Qualification  90-100%  55&lt;=    
-## 2 AAA         2013J                  28400 F      Scotland             HE Qualification  20-30%   35-55   
-## 3 AAA         2013J                  30268 F      North Western Region A Level or Equiv… 30-40%   35-55   
-## # ℹ 7 more variables: num_of_prev_attempts &lt;dbl&gt;, studied_credits &lt;dbl&gt;, disability &lt;chr&gt;,
-## #   final_result &lt;chr&gt;, module_presentation_length &lt;dbl&gt;, date_registration &lt;dbl&gt;,
-## #   date_unregistration &lt;dbl&gt;
+##   code_module code_presentation id_student gender region           highest_education imd_band age_band num_of_prev_attempts
+##   &lt;chr&gt;       &lt;chr&gt;                  &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;            &lt;chr&gt;             &lt;chr&gt;    &lt;chr&gt;                   &lt;dbl&gt;
+## 1 AAA         2013J                  11391 M      East Anglian Re… HE Qualification  90-100%  55&lt;=                        0
+## 2 AAA         2013J                  28400 F      Scotland         HE Qualification  20-30%   35-55                       0
+## 3 AAA         2013J                  30268 F      North Western R… A Level or Equiv… 30-40%   35-55                       0
+## # ℹ 6 more variables: studied_credits &lt;dbl&gt;, disability &lt;chr&gt;, final_result &lt;chr&gt;, module_presentation_length &lt;dbl&gt;,
+## #   date_registration &lt;dbl&gt;, date_unregistration &lt;dbl&gt;
 ```
 
 ]
@@ -385,6 +384,15 @@ Estrellado, R. A., Freer, E. A., Mostipak, J., Rosenberg, J. M., &amp; Velásque
 
 ]
 ]
+
+---
+
+# Troubleshooting and setup
+
+- Please view [this Google doc](https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit)
+- Change default settings: Tools -&gt; Global Settings -&gt; Workspace -&gt; DO NOT restore workspace 
+- Change default settings: Tools -&gt; Global Settings -&gt; Workspace -&gt; Save workspace to .RData NEVER
+- Session -&gt; Restart R and Clear Output is a good place to start
 
 ---
 
