minor edits after the first presentation

--- a/lab-1/ll-1-case-study-key.html
+++ b/lab-1/ll-1-case-study-key.html
@@ -1770,7 +1770,7 @@ cleaning tasks. Use the code chunk below to load these two packages:</p>
 ## ✖ dplyr::lag()      masks stats::lag()
 ## ✖ yardstick::spec() masks readr::spec()
 ## ✖ recipes::step()   masks stats::step()
-## • Learn how to get started at https://www.tidymodels.org/start/</code></pre>
+## • Use suppressPackageStartupMessages() to eliminate package startup messages</code></pre>
 <pre class="r"><code>library(janitor)</code></pre>
 <pre><code>## 
 ## Attaching package: &#39;janitor&#39;</code></pre>
