--- a/lab-2/ll-2-overview-presentation.html
+++ b/lab-2/ll-2-overview-presentation.html
@@ -4,7 +4,7 @@
     <title>Machine Learning Learning Lab 2: Interpretation</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr. Joshua Rosenberg" />
-    <meta name="date" content="2023-07-18" />
+    <meta name="date" content="2023-07-19" />
     <script src="libs/header-attrs-2.22/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
@@ -38,7 +38,7 @@ class: clear, title-slide, inverse, center, top, middle
 # Machine Learning Learning Lab 2: Interpretation
 ----
 ### **Dr. Joshua Rosenberg**
-### July 18, 2023
+### July 19, 2023
 
 ---
 
@@ -175,6 +175,8 @@ You can think of the following statistics as slicing and dicing the confusion ma
 
 
 ]
+
+
 ]
 
 ---
@@ -217,6 +219,14 @@ Let's consider a very simple data set, `d`, one with _time_point_ data, `var_a`,
 ]
 ]
 
+
+---
+
+# AUC-ROC
+
+- Informs us as to how the True Positive rate changes given a different classification threshhold
+- Classification threshhold: the probability above which a model makes a positive prediction
+- Higher is better
 
 ---
 
