--- a/lab-2/ll-2-overview-presentation.html
+++ b/lab-2/ll-2-overview-presentation.html
@@ -146,15 +146,15 @@ Now, let's create a confusion matrix based on this data:
 
 .panel[.panel-name[Conf Mat]
 
-**Accuracy**: Proportion of the population that is true positive or true negative
+**Accuracy**: Prop. of the sample that is true positive or true negative
 
-**True positive (TP)**: Proportion of the population that is affected by a condition and correctly tested positive
+**True positive (TP)**: Prop. of the sample that is affected by a condition and correctly tested positive
 
-**True negative (TN)**: Proportion of the population that is not affected by a condition and correctly tested negative
+**True negative (TN)**: Prop. of the sample that is not affected by a condition and correctly tested negative
 
-**False positive (FP)**: Proportion of the population that is not affected by a condition and incorrectly tested positive
+**False positive (FP)**: Prop. of the sample that is not affected by a condition and incorrectly tested positive
 
-**False negative (FN)**: Proportion of the population that is affected by a condition and incorrectly tested positive.
+**False negative (FN)**: Prop. of the sample that is affected by a condition and incorrectly tested positive.
 
 ]
 
@@ -200,13 +200,6 @@ Let's consider a very simple data set, `d`, one with _time_point_ data, `var_a`,
 
 ]
 
-.panel[.panel-name[Why?]
-
-&lt;img src="ll-2-overview-presentation_files/figure-html/unnamed-chunk-7-1.png" width="30%" /&gt;
-
-]
-
-
 .panel[.panel-name[How?]
 
 - We can do all of these things **manually**
@@ -242,11 +235,10 @@ library(tidyverse)
 library(tidymodels)
 
 starwars_recoded &lt;- starwars %&gt;% # built-in data available just by typing
-    mutate(species_human = ifelse(species == "Human", 1, 0), # recoding species to create a 0-1 outcome 
-           species_human = as.factor(species_human)) # changing to a factor
+    mutate(species_human = ifelse(species == "Human", "human", "not human"))
 
 starwars_recoded %&gt;% 
-    count(species) # how many humans are there?
+    count(species_human) # how many humans are there?
 ```
 
 ]
@@ -257,10 +249,9 @@ starwars_recoded %&gt;%
 
 
 ```r
-train_test_split &lt;- initial_split(starwars_recoded, prop = .80)
+train_test_split &lt;- initial_split(starwars_recoded, prop = .70)
 
 data_train &lt;- training(train_test_split)
-data_test &lt;- testing(train_test_split)
 ```
 
 ]
@@ -272,7 +263,8 @@ data_test &lt;- testing(train_test_split)
 
 ```r
 # predicting humans based on the variables we used in LL1 + birth_year and homeworld
-my_rec &lt;- recipe(species_human ~ height + mass + birth_year + eye_color, data = data_train)
+my_rec &lt;- recipe(species_human ~ height + mass + birth_year + eye_color, data = data_train) %&gt;% 
+    step_dummy(eye_color) # need to dummy code
 ```
 
 ]
@@ -291,8 +283,7 @@ my_mod &lt;-
 my_wf &lt;-
     workflow() %&gt;%
     add_model(my_mod) %&gt;% 
-    add_recipe(my_rec) %&gt;% 
-    step_dummy(eye_color) # need to dummy code
+    add_recipe(my_rec)
 ```
 
 ]
