update during am ll3 lab

--- a/lab-1/ll-1-overview-presentation.html
+++ b/lab-1/ll-1-overview-presentation.html
@@ -158,13 +158,13 @@ These are joined together (see `oulad.R`) for this learning lab. You'll be doing
 
 ```
 ## # A tibble: 3 × 15
-##   code_module code_presentation id_student gender region  highest_education imd_band age_band num_of_prev_attempts studied_credits
-##   &lt;chr&gt;       &lt;chr&gt;                  &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;   &lt;chr&gt;             &lt;chr&gt;    &lt;chr&gt;                   &lt;dbl&gt;           &lt;dbl&gt;
-## 1 AAA         2013J                  11391 M      East A… HE Qualification  90-100%  55&lt;=                        0             240
-## 2 AAA         2013J                  28400 F      Scotla… HE Qualification  20-30%   35-55                       0              60
-## 3 AAA         2013J                  30268 F      North … A Level or Equiv… 30-40%   35-55                       0              60
-## # ℹ 5 more variables: disability &lt;chr&gt;, final_result &lt;chr&gt;, module_presentation_length &lt;dbl&gt;, date_registration &lt;dbl&gt;,
-## #   date_unregistration &lt;dbl&gt;
+##   code_module code_presentation id_student gender region               highest_education     imd_band age_band
+##   &lt;chr&gt;       &lt;chr&gt;                  &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;                &lt;chr&gt;                 &lt;chr&gt;    &lt;chr&gt;   
+## 1 AAA         2013J                  11391 M      East Anglian Region  HE Qualification      90-100%  55&lt;=    
+## 2 AAA         2013J                  28400 F      Scotland             HE Qualification      20-30%   35-55   
+## 3 AAA         2013J                  30268 F      North Western Region A Level or Equivalent 30-40%   35-55   
+## # ℹ 7 more variables: num_of_prev_attempts &lt;dbl&gt;, studied_credits &lt;dbl&gt;, disability &lt;chr&gt;,
+## #   final_result &lt;chr&gt;, module_presentation_length &lt;dbl&gt;, date_registration &lt;dbl&gt;, date_unregistration &lt;dbl&gt;
 ```
 
 ]
