--- a/lab-4/ll-4-overview-presentation.html
+++ b/lab-4/ll-4-overview-presentation.html
@@ -4,7 +4,7 @@
     <title>Machine Learning Learning Lab 4: Unsupervised Methods</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr. Joshua Rosenberg" />
-    <meta name="date" content="2023-07-18" />
+    <meta name="date" content="2023-07-21" />
     <script src="libs/header-attrs-2.22/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
@@ -29,7 +29,7 @@ class: clear, title-slide, inverse, center, top, middle
 # Machine Learning Learning Lab 4: Unsupervised Methods
 ----
 ### **Dr. Joshua Rosenberg**
-### July 18, 2023
+### July 21, 2023
 
 ---
 
@@ -52,10 +52,10 @@ The previous three learning labs involved the use of data with known outcome var
 
 .panelset[
 
-panel[.panel-name[Background p1]
+.panel[.panel-name[Background  p1]
 
 
-### What technique should I choose?
+### Which technique should I choose?
 
 Do you have coded data or data with a known outcome -- let's say about K-12 students -- and, do you want to:
 
@@ -66,7 +66,7 @@ Do you have coded data or data with a known outcome -- let's say about K-12 stud
 &lt;bold&gt;&lt;h4&gt;&lt;center&gt;Supervised methods may be your best bet&lt;/center&gt;&lt;/h4&gt;&lt;/bold&gt;
 ]
 
-.panel[.panel-name[Background p2]
+.panel[.panel-name[Background]
 
 ### What technique should I choose?
 
@@ -83,7 +83,7 @@ Do you not yet have codes/outcomes -- and do you want to?
 
 .panel[.panel-name[Getting Started]
 
-- For what kinds of specific studies or use cases might unsupervised methods be helpful?
+- For what kinds of specific studies or use cases might unsupervised methods be helpful in your research?
 
 ]
 
