edits to ll1 case study

--- a/lab-1/ll-1-overview-presentation.html
+++ b/lab-1/ll-1-overview-presentation.html
@@ -4,7 +4,7 @@
     <title>Machine Learning Learning Lab 1 Overview: Prediction</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr. Joshua Rosenberg" />
-    <meta name="date" content="2023-07-18" />
+    <meta name="date" content="2023-07-26" />
     <script src="libs/header-attrs-2.22/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
@@ -37,7 +37,7 @@ class: clear, title-slide, inverse, center, top, middle
 
 # Machine Learning Learning Lab 1 Overview: Prediction
 ### **Dr. Joshua Rosenberg**
-### July 18, 2023
+### July 26, 2023
 
 ---
 
@@ -158,13 +158,17 @@ These are joined together (see `oulad.R`) for this learning lab. You'll be doing
 
 ```
 ## # A tibble: 3 × 15
-##   code_module code_presentation id_student gender region               highest_education     imd_band age_band
-##   &lt;chr&gt;       &lt;chr&gt;                  &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;                &lt;chr&gt;                 &lt;chr&gt;    &lt;chr&gt;   
-## 1 AAA         2013J                  11391 M      East Anglian Region  HE Qualification      90-100%  55&lt;=    
-## 2 AAA         2013J                  28400 F      Scotland             HE Qualification      20-30%   35-55   
-## 3 AAA         2013J                  30268 F      North Western Region A Level or Equivalent 30-40%   35-55   
-## # ℹ 7 more variables: num_of_prev_attempts &lt;dbl&gt;, studied_credits &lt;dbl&gt;, disability &lt;chr&gt;,
-## #   final_result &lt;chr&gt;, module_presentation_length &lt;dbl&gt;, date_registration &lt;dbl&gt;, date_unregistration &lt;dbl&gt;
+##   code_module code_presentation id_student gender region
+##   &lt;chr&gt;       &lt;chr&gt;                  &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt; 
+## 1 AAA         2013J                  11391 M      East …
+## 2 AAA         2013J                  28400 F      Scotl…
+## 3 AAA         2013J                  30268 F      North…
+## # ℹ 10 more variables: highest_education &lt;chr&gt;,
+## #   imd_band &lt;chr&gt;, age_band &lt;chr&gt;,
+## #   num_of_prev_attempts &lt;dbl&gt;, studied_credits &lt;dbl&gt;,
+## #   disability &lt;chr&gt;, final_result &lt;chr&gt;,
+## #   module_presentation_length &lt;dbl&gt;,
+## #   date_registration &lt;dbl&gt;, date_unregistration &lt;dbl&gt;
 ```
 
 ]
